deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemt
  labels:
    app.kubernetes.io/name: telemt
    app.kubernetes.io/part-of: telemt-k8s
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.88.111
  selector:
    app.kubernetes.io/name: telemt
  ports:
    - name: mtproxy
      port: 443
      targetPort: mtproxy
      protocol: TCP
